--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ul class="nav navbar">
-  <li><a [routerLink]="['/home']">Home</a></li>
-  <li><a [routerLink]="['/products']">Products</a></li>
+<ul class="nav">
+  <li class="nav-item"><a class="nav-link" [routerLink]="['/home']">Home</a></li>
+  <li class="nav-item"><a class="nav-link" [routerLink]="['/products']">Products</a></li>
 </ul>
 <div style="text-align:center">
   <h1>
