--- a/src/app/shared/star.component.html
+++ b/src/app/shared/star.component.html
@@ -1,6 +1,6 @@
 <div class="crop"
      [style.width.px]="starWidth"
-     [title]="rating | number: '1.1-1'"
+     [title]="rating"
      (click)='onClick()' >
   <div style="width: 75px">
     <span class="fa fa-star"></span>
